<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Xiaomi-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="advanced_settings">Xiaomi Parts</string>
    <string name="advanced_settings_summary">Extra Settings</string>

    <!-- Category Title -->
    <string name="display_category">Display</string>
    <string name="other_category">Other</string>
    <string name="vibration_category">Vibration</string>


    <!-- USB fastcharge -->
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fastcharge_summary">Charge upto 900mA when connected to a computer via USB 3.0 port</string>

    <!-- FPS Info -->
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>

    <!-- Vibrator -->
    <string name="vibration_strength_title">Strength</string>
    
    <!-- KCal -->
    <string name="device_kcal_title">Display Color Calibration</string>
    
    <!-- Spectrum Profiles -->
    <string name="spectrum_profile_title">Spectrum</string>
    <string name="spectrum_title">Spectrum Profiles</string>
    <string name="spectrum_summary">Choose Spectrum Profiles</string>
    <string name="spectrum_dialogTitle">Choose Spectrum Profiles</string>

    <!-- Values for Spectrum Presets -->
    <string name="spectrum_performance">Performance</string>
    <string name="spectrum_battery">Battery</string>
    <string name="spectrum_gaming">Gaming</string>
    <string name="spectrum_balance">Balance</string>

    <!-- Thermal Profiles -->
	<string name="thermal_profile_title">Thermal</string>
    <string name="thermal_title">Thermal Settings</string>
    <string name="thermal_summary">Choose Thermal Profile</string>
    <string name="thermal_dialogTitle">Choose Thermal Profile</string>

    <!-- Values for Thermal Presets -->
    <string name="thermal_extreme_battery">Extreme Battery</string>
    <string name="thermal_dynamic">Dynamic (evaluation)</string>
    <string name="thermal_class">Class0</string>
    <string name="thermal_arvr">AR-VR</string>
    <string name="thermal_incalls">In-Calls</string>
    <string name="thermal_game">Game</string>
    <string name="thermal_game2">Game2</string>
    <string name="thermal_notset">Not-Set</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_pubg">Pubg</string>
    <string name="thermal_youtube">Youtube</string>
	
    <!-- kcal -->
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>

    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>

    <string name="presets_dialog_title">Select Preset</string>
    <!-- Presets -->
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_sir_banger">Sir Banger</string>
    <string name="preset_gerard_extrem_cool">Gerard Extreme Cool</string>
    <string name="preset_yoyoz808">Yoyoz808</string>
    <string name="preset_purian">Purian</string>
    <string name="preset_deep_black_colorful">Deep Black Colorful</string>
    <string name="preset_vomer_deep_rich">Vomer Deep Rich</string>
    <string name="preset_franco">Franco</string>
    <string name="preset_wrinklefree_cool">WrinkleFree Cool</string>
    <string name="preset_harley_tech">Harley-Tech</string>
    <string name="preset_perfection">Perfection</string>
    <string name="preset_banged_up">Banged up</string>
    <string name="preset_sim_cooler">SimCooler</string>
    <string name="preset_obsanity">Obsanity</string>
    <string name="preset_obsanity_ips">Obsanity IPS</string>

    <string name="hall_wakeup_title">Flip Cover Wakeup</string>
    <string name="hall_title">Enable Flip Cover Wakeup</string>
    <string name="hall_wakeup_summary">Wakeup device via magnetic Flip Cover</string>
    <!-- menu -->
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- Label for feature switch  -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch -->
    <string name="switch_bar_off">Off</string>

    <!-- Custom SeekBar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
</resources>
