<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Xiaomi-SDM660 Project
     Copyright (C) 2020 The MoKee Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:title="@string/device_kcal_title"
            android:icon="@drawable/ic_color">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.mokee.settings.kcal.KCalSettingsActivity"
                android:targetPackage="org.mokee.settings.kcal" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/performance_profile_title">

        <org.mokee.settings.device.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/spectrum_dialogTitle"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:key="spectrum"
            android:summary="@string/spectrum_summary"
            android:icon="@drawable/ic_spectrum" 
            android:title="@string/spectrum_title" />

        <org.mokee.settings.device.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/thermal_dialogTitle"
            android:entries="@array/thermal_profiles"
            android:entryValues="@array/thermal_values"
            android:key="thermal"
            android:summary="@string/thermal_summary"
            android:title="@string/thermal_title"
            android:icon="@drawable/ic_thermal" />
    </PreferenceCategory>
	
    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <org.mokee.settings.device.preferences.VibratorStrengthPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibrate"
            android:title="@string/vibration_strength_title" />

        <org.mokee.settings.device.preferences.VibratorNotifStrengthPreference
             android:key="vib_notif_strength"
             android:icon="@drawable/ic_vibrate_notif"
             android:title="@string/vibration_notif_strength_title" />

	    <org.mokee.settings.device.preferences.VibratorCallStrengthPreference
            android:key="vib_call_strength"
            android:icon="@drawable/ic_vibrate_call"
            android:title="@string/vibration_call_strength_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_category" >
        <SwitchPreference
            android:key="fastcharge"
            android:defaultValue="1"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_fastcharge"
            android:summary="@string/fastcharge_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hall_wakeup"
        android:title="@string/hall_wakeup_title">

        <org.mokee.settings.device.preferences.SecureSettingSwitchPreference
            android:defaultValue="true"
            android:key="hall"
            android:summary="@string/hall_wakeup_summary"
            android:title="@string/hall_title"
            android:icon="@drawable/ic_flip" />
    </PreferenceCategory>
</PreferenceScreen>
